--- a/grobid-trainer/pom.xml
+++ b/grobid-trainer/pom.xml
@@ -171,6 +171,10 @@
 								</goals>
 								<configuration>
 									<mainClass>org.grobid.trainer.FulltextTrainer</mainClass>
+									<fork>true</fork>
+									<arguments>
+										<argument>-Xmx=4096m</argument>
+									</arguments>
 								</configuration>
 							</execution>
 						</executions>
