--- a/grobid-core/pom.xml
+++ b/grobid-core/pom.xml
@@ -42,6 +42,13 @@
     </repositories>
 
 	<dependencies>
+
+        <dependency>
+            <groupId>com.twelvemonkeys.imageio</groupId>
+            <artifactId>imageio-pnm</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+
 		<dependency>
 			<groupId>org.chasen</groupId>
 			<artifactId>crfpp</artifactId>
